--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,19 +4,24 @@ on: [push, pull_request]
 
 jobs:
   build-ubuntu-without-scanner:
-    runs-on: ubuntu-24.04
+    name: "Ubuntu 24.04 (no scanner)"
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:24.04
     steps:
+      - name: update apt
+        run: apt update
+      - name: install dependencies
+        run: apt -y install git cmake build-essential ccache libssl-dev libunbound-dev libboost-all-dev
+                            libqrencode-dev qt6-base-dev qt6-svg-dev qt6-websockets-dev qt6-multimedia-dev
+                            qt6-wayland-dev libzip-dev libsodium-dev libgcrypt20-dev libx11-xcb-dev
+                            protobuf-compiler libprotobuf-dev libhidapi-dev libzxing-dev libusb-dev
+                            libusb-1.0-0-dev
+      - name: configure git
+        run: git config --global --add safe.directory '*'
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: update apt
-        run: sudo apt update
-      - name: install dependencies
-        run: sudo apt -y install git cmake build-essential ccache libssl-dev libunbound-dev libboost-all-dev
-                                 libqrencode-dev qt6-base-dev qt6-svg-dev qt6-websockets-dev qt6-multimedia-dev
-                                 qt6-wayland-dev libzip-dev libsodium-dev libgcrypt20-dev libx11-xcb-dev
-                                 protobuf-compiler libprotobuf-dev libhidapi-dev libzxing-dev libusb-dev
-                                 libusb-1.0-0-dev
       - name: build
         run: |
           mkdir build
@@ -37,7 +42,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - uses: ./.github/actions/set-make-job-count
       - name: build
         run: |
           cmake -S . -B build
