--- a/contrib/installers/windows/setup.nsi.in
+++ b/contrib/installers/windows/setup.nsi.in
@@ -1,6 +1,6 @@
 Name "Feather Wallet"
 
-OutFile "${CUR_PATH}\contrib\installers\windows\FeatherWalletSetup-@PROJECT_VERSION@.exe"
+OutFile "${CUR_PATH}\contrib\installers\windows\FeatherWalletSetup.exe"
 RequestExecutionLevel highest
 SetCompressor /SOLID lzma
 SetDateSave off
