ci: add macos build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,3 +46,17 @@ jobs:
         run: |
           cmake -S . -B build
           cmake --build build -j $(nproc)
+
+  build-macos:
+    name: 'macOS (brew)'
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: install dependencies
+        run: HOMEBREW_NO_AUTO_UPDATE=1 brew install qt libsodium libzip qrencode unbound cmake boost hidapi openssl expat libunwind-headers protobuf pkgconfig
+      - name: build
+        run: |
+          cmake -S . -B build -DWITH_SCANNER=Off
+          cmake --build build -j $(nproc)
