--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
+IF(STATIC AND APPLE)
+    set(CMAKE_AUTOMOC_COMPILER_PREDEFINES OFF)
+ENDIF()
 
 set(QT_COMPONENTS
         Core
